Spec Issue 27196: Add columns/horizontal scrolling  - Fixing sorting issue in strategy column. We should consider doing this for all nullable columns.  - Partial fix for border highlighting  - Refactor LearnFacet.createColumnFilterStore to use snapshot.getRange rather than the direct query results from the store load process.  - Set this.studyData, this.assayData, etc to undefined upon completion of _onLoadComplete in learn stores to prevent excessive executions of _onLoadComplete.

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -450,7 +450,6 @@ img.detail-has-data-small {
       @include transition(background-color 0.2s ease-out);
       background-color: $select-hover-color;
       cursor: pointer;
-      border-color: transparent;
     }
   }
 }
